# cookiecutter-py

./: .gitlab-ci.yml  .pdbrc  README.md  lint.sh  mypy.ini  pyproject.toml  ruff.toml  unit_tests.sh
.github/: dependabot.yml
.github/workflows/: ci.yaml
src/cookiecutter_py/: main.py
tests/: test_main.py
