[project]
name = "cookiecutter_py"
version = "0.1.0"
description = "Python project template"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[tool.docformatter]
black = true
recursive = true

[dependency-groups]
lint = [
    "docformatter",
    "mypy",
    "ruff",
    "typos",
]
test = [
    "pytest",
    "ipython",
]
